--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,14 +76,15 @@ footer {
     font-size: 10px;
     color: #ffffff;
     width: 100%;
-    height: 5vh;
+    height: 8vh;
     border-top: 5px solid #55b8a2;
     text-align: center;
 }
 
-#copyright {
-    position: absolute;
-    bottom: 5px;
+.copyright {
+    vertical-align: middle; 
+    display: inline-block;    
+    line-height: 8vh;
 }
 
 /* Contact Page */
@@ -205,3 +206,18 @@ img {
     margin: 20px;
 }
 
+
+/* media query to make content fit different size viewport */
+/* viewport size 980px and up  */
+@media only screen and (max-width: 980px) {
+
+}
+/* viewport size 768px and up  */
+
+@media only screen and (max-width: 769px) {
+    
+}
+/* viewport size 640px and up  */
+@media only screen and (max-width: 640px) {
+
+}
