--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,12 +54,12 @@ nav a {
 }
 
 nav a:hover {
-    float: right;
-    position: relative;
-    right: 10vw;
-    font-size: 20px;
-    line-height: 6vh;
-    padding: 20px 10px 15px 10px;
+    /* float: right; */
+    /* position: relative; */
+    /* right: 10vw; */
+    /* font-size: 20px; */
+    /* line-height: 6vh; */
+    /* padding: 20px 10px 15px 10px; */
     color: #55b8a2;
 }
 
